# sossim

./: .gitignore  .nojekyll  Dockerfile  LICENSE  README.md  build.py  dev_server.py  pyproject.toml  requirements.txt  requirements_development.txt
app/: app.py  pyconfig.json  pyconfig.toml  sossim.html  sossim_pyodide.html
documentation/: agent.html  capabilities.html  configuration.html  core.html  datacollection.html  domscript.html  dynamics.html  entities.html  index.html  model.html  search.js  sos_core.html  sossim.html  space.html  state.html  view.html
documentation/sossim/: __main__.html  capabilities.html  configuration.html  core.html  datacollection.html  dynamics.html  entities.html  model.html  space.html  view.html
sossim/: __init__.py  __main__.py  capabilities.py  configuration.py  core.py  datacollection.py  entities.py  model.py  space.py  user_interface.py
source/: agent.py  capabilities.py  configuration.py  core.py  datacollection.py  domscript.py  dynamics.py  entities.py  model.py  pyconfig.toml  sos_core.py  sossim.css  sossim.html  sossim.py  space.py  state.py  user_interface.py  view.py
source/domed/: __init__.py  core.py  html.py  svg.py
source/mesa/: README.md  __init__.py  agent.py  datacollection.py  model.py  space.py  time.py
