[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sossim"
version = "0.1.0"
authors = [{name = "Jakob Axelsson", email = "jakob.pm.axelsson@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["description"]

[project.urls]
Home = "https://github.com/jakobaxelsson/sossim"